css dark mode fix

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .heading1 {
   text-align: center;
 }
-#mode {
+#modedark {
   margin-left: 90%;
   cursor: pointer;
 }
